--- a/home.html
+++ b/home.html
@@ -13,11 +13,11 @@
         </div>
         
         <nav class="divOpt">
-            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/home/home.html"><b>Home</b></a><br><hr></li>
-            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/sobre/sobre.html">Sobre</a></li>
-            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/academico/academico.html">Acadêmico</a></li>
-            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/experiencia/experiencia.html">Experiência</a></li>
-            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/contato/contato.html">Contato</a></li>
+            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/home.html"><b>Home</b></a><br><hr></li>
+            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/sobre.html">Sobre</a></li>
+            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/academico.html">Acadêmico</a></li>
+            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/experiencia.html">Experiência</a></li>
+            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/contato.html">Contato</a></li>
         </nav>
     </header>
     <hr>
