--- a/sobre.html
+++ b/sobre.html
@@ -12,11 +12,11 @@
             <img class="logo" src="../Logotipo para empresa letra G! Logo box G-Photoroom.png" alt="Logotipo G">  
         </div>
         <nav class="divOpt">
-            <li class="inline liMenu"><a style="text-decoration: none;" href="http://127.0.0.1:5500/home/home.html">Home</a></li>
-            <li class="inline liMenu"><a style="text-decoration: none;" href="http://127.0.0.1:5500/sobre/sobre.html"><b>Sobre</b></a><br><hr></a></li>
-            <li class="inline liMenu"><a style="text-decoration: none;" href="http://127.0.0.1:5500/academico/academico.html">Acadêmico</a></li>
-            <li class="inline liMenu"><a style="text-decoration: none;" href="http://127.0.0.1:5500/experiencia/experiencia.html">Experiência</a></li>
-            <li class="inline liMenu"><a style="text-decoration: none;" href="http://127.0.0.1:5500/contato/contato.html">Contato</a></li>
+            <li class="inline liMenu"><a style="text-decoration: none;" href="http://127.0.0.1:5500/home.html">Home</a></li>
+            <li class="inline liMenu"><a style="text-decoration: none;" href="http://127.0.0.1:5500/sobre.html"><b>Sobre</b></a><br><hr></a></li>
+            <li class="inline liMenu"><a style="text-decoration: none;" href="http://127.0.0.1:5500/academico.html">Acadêmico</a></li>
+            <li class="inline liMenu"><a style="text-decoration: none;" href="http://127.0.0.1:5500/experiencia.html">Experiência</a></li>
+            <li class="inline liMenu"><a style="text-decoration: none;" href="http://127.0.0.1:5500/contato.html">Contato</a></li>
         </nav>
     </header>
     <hr>
