--- a/academico.html
+++ b/academico.html
@@ -13,11 +13,11 @@
         </div>
         
         <nav class="divOpt">
-            <li class="liMenu inline"><a style="text-decoration: none;" href="http://127.0.0.1:5500/home/home.html">Home</a></li>
-            <li class="liMenu inline"><a style="text-decoration: none;" href="http://127.0.0.1:5500/sobre/sobre.html">Sobre</a></li>
-            <li class="liMenu inline"><a style="text-decoration: none;" href="http://127.0.0.1:5500/academico/academico.html"><b>Acadêmico</b></a><br><hr></a></li>
-            <li class="liMenu inline"><a style="text-decoration: none;" href="http://127.0.0.1:5500/experiencia/experiencia.html">Experiência</a></li>
-            <li class="liMenu inline"><a style="text-decoration: none;" href="http://127.0.0.1:5500/contato/contato.html">Contato</a></li>
+            <li class="liMenu inline"><a style="text-decoration: none;" href="http://127.0.0.1:5500/home.html">Home</a></li>
+            <li class="liMenu inline"><a style="text-decoration: none;" href="http://127.0.0.1:5500/sobre.html">Sobre</a></li>
+            <li class="liMenu inline"><a style="text-decoration: none;" href="http://127.0.0.1:5500/academico.html"><b>Acadêmico</b></a><br><hr></a></li>
+            <li class="liMenu inline"><a style="text-decoration: none;" href="http://127.0.0.1:5500/experiencia.html">Experiência</a></li>
+            <li class="liMenu inline"><a style="text-decoration: none;" href="http://127.0.0.1:5500/contato.html">Contato</a></li>
         </nav>
     </header>
     <hr>
