--- a/contato.html
+++ b/contato.html
@@ -13,7 +13,7 @@
         </div>
         
         <nav class="divOpt">
-            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/home.html">Home</a></li>
+            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/index.html">Home</a></li>
             <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/sobre.html">Sobre</a></li>
             <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/academico.html">Acadêmico</a></li>
             <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/experiencia.html">Experiência</a></li>
