--- a/academico.html
+++ b/academico.html
@@ -9,15 +9,15 @@
 <body>
     <header class="divMenu">
         <div class="inline divLogo">
-            <img class="logo" src="../Logotipo para empresa letra G! Logo box G-Photoroom.png" alt="Logotipo G">  
+            <img class="logo" src="./assets/Logotipo para empresa letra G! Logo box G-Photoroom.png" alt="Logotipo G">  
         </div>
         
         <nav class="divOpt">
-            <li class="liMenu inline"><a style="text-decoration: none;" href="http://127.0.0.1:5500/index.html">Home</a></li>
-            <li class="liMenu inline"><a style="text-decoration: none;" href="http://127.0.0.1:5500/sobre.html">Sobre</a></li>
-            <li class="liMenu inline"><a style="text-decoration: none;" href="http://127.0.0.1:5500/academico.html"><b>Acadêmico</b></a><br><hr></a></li>
-            <li class="liMenu inline"><a style="text-decoration: none;" href="http://127.0.0.1:5500/experiencia.html">Experiência</a></li>
-            <li class="liMenu inline"><a style="text-decoration: none;" href="http://127.0.0.1:5500/contato.html">Contato</a></li>
+            <li class="liMenu inline"><a style="text-decoration: none;" href="index.html">Home</a></li>
+            <li class="liMenu inline"><a style="text-decoration: none;" href="sobre.html">Sobre</a></li>
+            <li class="liMenu inline"><a style="text-decoration: none;" href="academico.html"><b>Acadêmico</b></a><br><hr></a></li>
+            <li class="liMenu inline"><a style="text-decoration: none;" href="experiencia.html">Experiência</a></li>
+            <li class="liMenu inline"><a style="text-decoration: none;" href="contato.html">Contato</a></li>
         </nav>
     </header>
     <hr>
