--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <header class="divMenu">
         <div class="divLogo">
-            <img class="logo" src="../Logotipo para empresa letra G! Logo box G-Photoroom.png" alt="Logotipo G">  
+            <img class="logo" src="./assets/Logotipo para empresa letra G! Logo box G-Photoroom.png" alt="Logotipo G">  
         </div>
         
         <nav class="divOpt">
-            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/index.html"><b>Home</b></a><br><hr></li>
-            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/sobre.html">Sobre</a></li>
-            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/academico.html">Acadêmico</a></li>
-            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/experiencia.html">Experiência</a></li>
-            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/contato.html">Contato</a></li>
+            <li><a style="text-decoration: none;" href="index.html"><b>Home</b></a><br><hr></li>
+            <li><a style="text-decoration: none;" href="sobre.html">Sobre</a></li>
+            <li><a style="text-decoration: none;" href="academico.html">Acadêmico</a></li>
+            <li><a style="text-decoration: none;" href="experiencia.html">Experiência</a></li>
+            <li><a style="text-decoration: none;" href="contato.html">Contato</a></li>
         </nav>
     </header>
     <hr>
@@ -27,7 +27,7 @@
             <p class="corTexto">Estudante de <b>Sistemas de Informação</b> e futuro desenvolvedor. Meu objetivo é me tornar um profissional completo, capaz de criar soluções tecnológicas que facilitem o dia a dia das pessoas. Neste portfólio, compartilho um pouco sobre minha <b>trajetória</b>, <b>habilidades</b> e <b>projetos</b>. Estou sempre aberto a novas oportunidades e desafios que me permitam crescer e contribuir para a área de TI.</p>
         </div>
         <div>
-            <img id="imagem" src="WhatsApp Image 2025-02-24 at 16.07.14.JPG" alt="Foto Guilherme Guimarães">
+            <img id="imagem" src="./assets/WhatsApp Image 2025-02-24 at 16.07.14.JPG" alt="Foto Guilherme Guimarães">
         </div>
     </section>
     
