--- a/sobre.html
+++ b/sobre.html
@@ -9,14 +9,14 @@
 <body>
     <header class="divMenu">
         <div class="divLogo">
-            <img class="logo" src="../Logotipo para empresa letra G! Logo box G-Photoroom.png" alt="Logotipo G">  
+            <img class="logo" src="./assets/Logotipo para empresa letra G! Logo box G-Photoroom.png" alt="Logotipo G">  
         </div>
         <nav class="divOpt">
-            <li class="inline liMenu"><a style="text-decoration: none;" href="http://127.0.0.1:5500/index.html">Home</a></li>
-            <li class="inline liMenu"><a style="text-decoration: none;" href="http://127.0.0.1:5500/sobre.html"><b>Sobre</b></a><br><hr></a></li>
-            <li class="inline liMenu"><a style="text-decoration: none;" href="http://127.0.0.1:5500/academico.html">Acadêmico</a></li>
-            <li class="inline liMenu"><a style="text-decoration: none;" href="http://127.0.0.1:5500/experiencia.html">Experiência</a></li>
-            <li class="inline liMenu"><a style="text-decoration: none;" href="http://127.0.0.1:5500/contato.html">Contato</a></li>
+            <li class="inline liMenu"><a style="text-decoration: none;" href="index.html">Home</a></li>
+            <li class="inline liMenu"><a style="text-decoration: none;" href="sobre.html"><b>Sobre</b></a><br><hr></a></li>
+            <li class="inline liMenu"><a style="text-decoration: none;" href="academico.html">Acadêmico</a></li>
+            <li class="inline liMenu"><a style="text-decoration: none;" href="experiencia.html">Experiência</a></li>
+            <li class="inline liMenu"><a style="text-decoration: none;" href="contato.html">Contato</a></li>
         </nav>
     </header>
     <hr>
@@ -48,12 +48,12 @@
             <h1>Hardskills</h1>
         </div>
         <div>
-            <img class="hardskills" src="CSS3_logo.svg.png" alt="Logo CSS3">
-            <img class="hardskills" src="HTML5_Badge_512.png" alt="Logo HTML5">
-            <img class="hardskills" src="C_Logo.png" alt="Logo C++">
-            <img class="hardskills" src="Python-logo-notext.svg.png" alt="Logo Python">
-            <img class="hardskills" src="JavaScript-logo.png" alt="Lojo JavaScript">
-            <img class="hardskills" src="R_logo.svg.png" alt="Logo R">
+            <img class="hardskills" src="./assets/CSS3_logo.svg.png" alt="Logo CSS3">
+            <img class="hardskills" src="./assets/HTML5_Badge_512.png" alt="Logo HTML5">
+            <img class="hardskills" src="./assets/C_Logo.png" alt="Logo C++">
+            <img class="hardskills" src="./assets/Python-logo-notext.svg.png" alt="Logo Python">
+            <img class="hardskills" src="./assets/JavaScript-logo.png" alt="Lojo JavaScript">
+            <img class="hardskills" src="./assets/R_logo.svg.png" alt="Logo R">
         </div>
     </section>
 </body>
