--- a/contato.html
+++ b/contato.html
@@ -9,30 +9,30 @@
 <body>
     <header class="divMenu">
         <div class="divLogo">
-            <img class="logo" src="../Logotipo para empresa letra G! Logo box G-Photoroom.png" alt="Logotipo G">  
+            <img class="logo" src="./assets/Logotipo para empresa letra G! Logo box G-Photoroom.png" alt="Logotipo G">  
         </div>
         
         <nav class="divOpt">
-            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/index.html">Home</a></li>
-            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/sobre.html">Sobre</a></li>
-            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/academico.html">Acadêmico</a></li>
-            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/experiencia.html">Experiência</a></li>
-            <li><a style="text-decoration: none;" href="http://127.0.0.1:5500/contato.html"><b>Contato</b></a><br><hr></a></li>
+            <li><a style="text-decoration: none;" href="index.html">Home</a></li>
+            <li><a style="text-decoration: none;" href="sobre.html">Sobre</a></li>
+            <li><a style="text-decoration: none;" href="academico.html">Acadêmico</a></li>
+            <li><a style="text-decoration: none;" href="experiencia.html">Experiência</a></li>
+            <li><a style="text-decoration: none;" href="contato.html"><b>Contato</b></a><br><hr></a></li>
         </nav>
     </header>
     <hr>
     <section style="text-align: center; padding: 50px; width: 80%; display: flex; flex-direction: row; justify-content: center;">
         <div style="padding-right: 20px;">
-            <img style="float: left;" class="imagem" src="WhatsApp Image 2025-03-14 at 17.21.32.JPG" alt="Foto Guilherme Guimarães">
+            <img style="float: left;" class="imagem" src="./assets/WhatsApp Image 2025-03-14 at 17.21.32.JPG" alt="Foto Guilherme Guimarães">
         </div>
         <div style="display: flex; flex-direction: column; justify-content: center;">
             <div>
                 <h1>Vamos Conversar?</h1>
             </div>
             <div>
-                <a href="https://linkedin.com/in/guilherme-guimarãess" target="_blank"><img style="padding-right: 20px;" class="contatos" src="LI-In-Bug.png" alt="Linkedin Logotipo"></a>
-                <a href="mailto:guitoluga@gmail.com"><img style="padding-right: 20px;" class="contatos" src="Gmail_icon_(2020).svg.png" alt="Gmail Logotipo"></a>
-                <a href="https://wa.me/+5518996959320" target="_blank"><img class="contatos" src="WhatsApp.svg.png" alt="Whatsapp Logotipo"></a>
+                <a href="https://linkedin.com/in/guilherme-guimarãess" target="_blank"><img style="padding-right: 20px;" class="contatos" src="./assets/LI-In-Bug.png" alt="Linkedin Logotipo"></a>
+                <a href="mailto:guitoluga@gmail.com"><img style="padding-right: 20px;" class="contatos" src="./assets/Gmail_icon_(2020).svg.png" alt="Gmail Logotipo"></a>
+                <a href="https://wa.me/+5518996959320" target="_blank"><img class="contatos" src="./assets/WhatsApp.svg.png" alt="Whatsapp Logotipo"></a>
             </div>
         </div>
     </section>
