Att, Footer and Style

--- a/academico.html
+++ b/academico.html
@@ -34,6 +34,13 @@
             <li>Medalhista de <b>Bronze</b> OBMEP - 2015</li>
         </ul>
     </section>
-    
+    <footer id="rodape">
+        
+        <p style="font-size:13px; font-weight:  bold; text-align: center; color: #000000;">
+            <a href="https://github.com/Tolugaa" target="_blank"><img id="logo" src="assets\loggo.Git.png" alt="Logo GitHub"></a>
+            <a href="https://linkedin.com/in/guilherme-guimarãess" target="_blank"><img id="logo" src="assets\linkedin_1384014.png" alt="Logo Linkedin"></a>
+            <br>By: Guilherme Guimarães
+        </p>
+    </footer>
 </body>
 </html>
