--- a/experiencia.html
+++ b/experiencia.html
@@ -27,6 +27,13 @@
         <h1>Inglês - Básico</h1>
         <p>Tive a oportunidade de ficar <b>5 meses</b> com visto de trabalho na <b>Índia</b> em 2022. Todos os dias fazia uso da língua o que <b>desenvolveu</b> meus conhecimentos com ela para o <b>dia-a-dia</b>.</p>
     </section>
-    
+    <footer id="rodape">
+        
+        <p style="font-size:13px; font-weight:  bold; text-align: center; color: #000000;">
+            <a href="https://github.com/Tolugaa" target="_blank"><img id="logo" src="assets\loggo.Git.png" alt="Logo GitHub"></a>
+            <a href="https://linkedin.com/in/guilherme-guimarãess" target="_blank"><img id="logo" src="assets\linkedin_1384014.png" alt="Logo Linkedin"></a>
+            <br>By: Guilherme Guimarães
+        </p>
+    </footer>
 </body>
 </html>
