--- a/index.html
+++ b/index.html
@@ -26,10 +26,18 @@
             <h1 >Ola, eu sou <br><b>Guilherme Guimarães</b>!</h1>
             <p class="corTexto">Estudante de <b>Sistemas de Informação</b> e futuro desenvolvedor. Meu objetivo é me tornar um profissional completo, capaz de criar soluções tecnológicas que facilitem o dia a dia das pessoas. Neste portfólio, compartilho um pouco sobre minha <b>trajetória</b>, <b>habilidades</b> e <b>projetos</b>. Estou sempre aberto a novas oportunidades e desafios que me permitam crescer e contribuir para a área de TI.</p>
         </div>
-        <div>
+        <div id="divFoto">
             <img id="imagem" src="./assets/WhatsApp Image 2025-02-24 at 16.07.14.JPG" alt="Foto Guilherme Guimarães">
         </div>
     </section>
+    <footer id="rodape">
+        
+        <p style="font-size:13px; font-weight:  bold; text-align: center; color: #000000;">
+            <a href="https://github.com/Tolugaa" target="_blank"><img id="logo" src="assets\loggo.Git.png" alt="Logo GitHub"></a>
+            <a href="https://linkedin.com/in/guilherme-guimarãess" target="_blank"><img id="logo" src="assets\linkedin_1384014.png" alt="Logo Linkedin"></a>
+            <br>By: Guilherme Guimarães
+        </p>
+    </footer>
     
 </body>
 </html>
