--- a/sobre.html
+++ b/sobre.html
@@ -56,5 +56,13 @@
             <img class="hardskills" src="./assets/R_logo.svg.png" alt="Logo R">
         </div>
     </section>
+    <footer id="rodape">
+        
+        <p style="font-size:13px; font-weight:  bold; text-align: center; color: #000000;">
+            <a href="https://github.com/Tolugaa" target="_blank"><img id="logo" src="assets\loggo.Git.png" alt="Logo GitHub"></a>
+            <a href="https://linkedin.com/in/guilherme-guimarãess" target="_blank"><img id="logo" src="assets\linkedin_1384014.png" alt="Logo Linkedin"></a>
+            <br>By: Guilherme Guimarães
+        </p>
+    </footer>
 </body>
 </html>
