--- a/contato.html
+++ b/contato.html
@@ -21,8 +21,8 @@
         </nav>
     </header>
     <hr>
-    <section class="divCorpo" style="text-align: center; display: flex; flex-direction: row; justify-content: center;">
-        <div id="divFoto" style="padding-right: 100px;">
+    <section class="divCorpo">
+        <div id="divFoto">
             <img style="float: left;" class="imagem" src="./assets/WhatsApp Image 2025-03-14 at 17.21.32.JPG" alt="Foto Guilherme Guimarães">
         </div>
         <div style="display: flex; flex-direction: column; justify-content: center;">
