Ajustes rodape e pagina contatos

--- a/academico.html
+++ b/academico.html
@@ -36,7 +36,7 @@
     </section>
     <footer id="rodape">
         
-        <p style="font-size:13px; font-weight:  bold; text-align: center; color: #000000;">
+        <p style="font-weight:  bold; text-align: center; color: #000000;">
             <a href="https://github.com/Tolugaa" target="_blank"><img id="logo" src="assets\loggo.Git.png" alt="Logo GitHub"></a>
             <a href="https://linkedin.com/in/guilherme-guimarãess" target="_blank"><img id="logo" src="assets\linkedin_1384014.png" alt="Logo Linkedin"></a>
             <br>By: Guilherme Guimarães
