--- a/sobre.html
+++ b/sobre.html
@@ -9,7 +9,7 @@
 <body>
     <header class="divMenu">
         <div class="divLogo">
-            <img class="logo" src="./assets/Logotipo para empresa letra G! Logo box G-Photoroom.png" alt="Logotipo G">  
+            <img class="logo" src="./assets/Logo.png" alt="Logotipo G">  
         </div>
         <nav class="divOpt">
             <li class="inline liMenu"><a style="text-decoration: none;" href="index.html">Home</a></li>
